--- a/_posts/Spark/2017-08-16-05_Spark_RDD.md
+++ b/_posts/Spark/2017-08-16-05_Spark_RDD.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Spark RDD
+title: 05 Spark RDD
 category: Spark
 tag: Spark
 ---
@@ -52,7 +52,7 @@ tag: Spark
     - SequenceFileRDDFunctions : 하둡의 시퀀스 파일을 다루기 위한 연산 제공
     
 12. RDD Process
-![AltText](images/sparkRDD.png)  
+![AltText](/public/img/Spark/sparkRDD.png)  
 
 ## 2. Spark Context 생성 방법
 ````scala
