--- a/_posts/Spark/2017-08-16-05_Spark_RDD.md
+++ b/_posts/Spark/2017-08-16-05_Spark_RDD.md
@@ -6,57 +6,58 @@ tags:
 - Spark
 - RDD
 ---
-## 1. RDD에 관한 배경 지식
-1. 스파크 클러스터
-    - 클러스터 : 여러대의 서버가 한대의 서버처럼 동작하는 것
-    - 클러스터 환경에서 동작하는 프로그램의 데이터는 여러 서버에 나눠져 병렬로 처리
+# 1. RDD에 관한 배경 지식
+
+## 1.1. 스파크 클러스터
+- 클러스터 : 여러대의 서버가 한대의 서버처럼 동작하는 것
+- 클러스터 환경에서 동작하는 프로그램의 데이터는 여러 서버에 나눠져 병렬로 처리
     
-2. 분산 데이터로서의 RDD
-    - RDD는 회복력을 가진 분산 데이터 집합
+## 1.2. 분산 데이터로서의 RDD
+- RDD는 회복력을 가진 분산 데이터 집합
     
-3. RDD의 불변성
-    - 한번 만들어진 RDD는 그 내용이 변경되지 않음
+## 1.3. RDD의 불변성
+- 한번 만들어진 RDD는 그 내용이 변경되지 않음
     
-4. 파티션
-    - RDD 데이터는 클러스터를 구성하는 여러 서버에 나누어 저장
-    - 분할된 데이터를 파티션이라는 단위로 관리
-    - 파티션의 크기 조정이 애플리케이션 성능에 큰 영향을 줌
+## 1.4. 파티션
+- RDD 데이터는 클러스터를 구성하는 여러 서버에 나누어 저장
+- 분할된 데이터를 파티션이라는 단위로 관리
+- 파티션의 크기 조정이 애플리케이션 성능에 큰 영향을 줌
     
-5. HDFS(Hadoop Distributed File System)
-    - 하둡의 파일 시스템
-    - 하둡의 파일시스템 관련 API에 대한 이해 필요
-        - 데이터 입출력 : [InputFormat](https://goo.gl/IrCypb), [OutputFormat](https://goo.gl/upCwcx)
-        - 텍스트 파일 입출력 : [SequnceFile](https://goo.gl/FI6y47), [Parquet](https://goo.gl/He9WPP)
+## 1.5. HDFS(Hadoop Distributed File System)
+- 하둡의 파일 시스템
+- 하둡의 파일시스템 관련 API에 대한 이해 필요
+    - 데이터 입출력 : [InputFormat](https://goo.gl/IrCypb), [OutputFormat](https://goo.gl/upCwcx)
+    - 텍스트 파일 입출력 : [SequnceFile](https://goo.gl/FI6y47), [Parquet](https://goo.gl/He9WPP)
          
-6. Job과 Executor
-    - 스파크 프로그램을 실행하는 것을 스파크 잡(Job)을 실행한다고 한다.
-    - Job이 클러스터에서 처리될때 Executor라는 프로세스가 생성
+## 1.6. Job과 Executor
+- 스파크 프로그램을 실행하는 것을 스파크 잡(Job)을 실행한다고 한다.
+- Job이 클러스터에서 처리될때 Executor라는 프로세스가 생성
     
-7. 드라이버 프로그램
-    - Driver Program : Job을 실행하는 프로그램. 즉, 메인함수를 가지고 있는 프로그램
-    - 드라이버 프로그램은 자신을 실행한 서버에서 동작하면서 스파크 컨텍스트를 생성해 클러스터의 각 워커 노드들에게 작업을 지시하고 결과를 취합하는 역할 수행
+## 1.7. 드라이버 프로그램
+- Driver Program : Job을 실행하는 프로그램. 즉, 메인함수를 가지고 있는 프로그램
+- 드라이버 프로그램은 자신을 실행한 서버에서 동작하면서 스파크 컨텍스트를 생성해 클러스터의 각 워커 노드들에게 작업을 지시하고 결과를 취합하는 역할 수행
     
-8. Transformation과 Action
-    - RDD Opertaion 
-        - Transformation : RDD의 형태를 변형하는 연산
-        - Action : RDD가 아닌 다른 타입의 결과를 반환하는 연산
+## 1.8. Transformation과 Action
+- RDD Opertaion 
+    - Transformation : RDD의 형태를 변형하는 연산
+    - Action : RDD가 아닌 다른 타입의 결과를 반환하는 연산
         
-9. 지연(lazy)동작과 최적화
-    - 다른 Action 연산이 호출되기 전까지는 Transformation연산은 실제로 수행되지 않음
+## 1.9. 지연(lazy)동작과 최적화
+- 다른 Action 연산이 호출되기 전까지는 Transformation연산은 실제로 수행되지 않음
     
-10. 함수의 전달
-    - 함수를 다른 함수의 파라미터로 전달하는 방식 사용(Javascript처럼)
+## 1.10. 함수의 전달
+- 함수를 다른 함수의 파라미터로 전달하는 방식 사용(Javascript처럼)
     
-11. 데이터 타입에 따른 RDD 연산
-    - PairRDDFunctions : Key-Value 구성된 테이블에 대한 연산을 제공
-    - OrderedRDDFunctions : Key-Value 구성된 테이블 대상으로 정렬 연산 제공
-    - DoubleRDDFunctions : double 타입의 데이터를 위한 것으로 sum(), mean()등의 연산 제공
-    - SequenceFileRDDFunctions : 하둡의 시퀀스 파일을 다루기 위한 연산 제공
+## 1.11. 데이터 타입에 따른 RDD 연산
+- PairRDDFunctions : Key-Value 구성된 테이블에 대한 연산을 제공
+- OrderedRDDFunctions : Key-Value 구성된 테이블 대상으로 정렬 연산 제공
+- DoubleRDDFunctions : double 타입의 데이터를 위한 것으로 sum(), mean()등의 연산 제공
+- SequenceFileRDDFunctions : 하둡의 시퀀스 파일을 다루기 위한 연산 제공
     
 12. RDD Process
 ![AltText](/public/img/Spark/sparkRDD.png)  
 
-## 2. Spark Context 생성 방법
+# 2. Spark Context 생성 방법
 ```scala
 // Spark Context 설정정보
 val conf = new SparkConf()
@@ -66,7 +67,7 @@ val conf = new SparkConf()
 // Spark Context 생성
 val sc = new SparkContext(conf)
 ```
-## 3. RDD 생성 방법
+# 3. RDD 생성 방법
 - 기본 RDD 생성
 ```scala
 val rdd1 = sc.parallelize(List("a", "b","c","d","e"))
@@ -76,7 +77,7 @@ val rdd1 = sc.parallelize(List("a", "b","c","d","e"))
 val rdd1 = sc.textFile("<spark_home_dir>/README.md")
 ```
 
-## 4. RDD Transformation
+# 4. RDD Transformation
 - RDD를 가공해서 RDD로 반환
 1. Map Operation(map 관련 연산)
     - map
@@ -171,7 +172,7 @@ val rdd1 = sc.textFile("<spark_home_dir>/README.md")
         - fraction : 
         - seed : 반복 시행시 일정한 결과값을 나오도록 제어하는 인자
         
-## 5. RDD Action
+# 5. RDD Action
 - RDD를 가공해서 RDD가 아닌 다른 값을 반환
 - lazy evaluation
 - RDD에 Action을 할때 Transform도 한꺼번에 발생하기 때문에, 반복되는 Action의 경우 성능향상을 위해 적절한 Caching이 필요
@@ -222,7 +223,7 @@ val rdd1 = sc.textFile("<spark_home_dir>/README.md")
     - getNumPartitions
         - RDD의 파티션 수를 반환
     
-## 6. RDD 데이터 불러오기, 저장하기
+# 6. RDD 데이터 불러오기, 저장하기
 - 파일 : 텍스트, JSON, 하둡의 시퀀스파일, csv
 - 파일시스템 : 로컬 파일시스템, HDFS, AWS S3, 오픈스택의 Swift
 - RDBMS : MySQL
@@ -244,7 +245,7 @@ val rdd1 = sc.textFile("<spark_home_dir>/README.md")
 - sequenceFile : 불러오기
 - saveAsSequenceFile : 저장하기
 
-## 7. 클러스터 공유변수
+# 7. 클러스터 공유변수
 1. 브로드캐스트 변수(Broadcast Variables)
     - 스파크 잡이 실행되는 동안 클러스터 내의 모든 서버에서 공유할 수 있는 읽기전용 자원을 설정할 수 있는 변수
     - 브로드캐스트 변수 설정 방법
@@ -322,7 +323,7 @@ val rdd1 = sc.textFile("<spark_home_dir>/README.md")
     }
     ```
 
-## References
+# References
 - 빅데이터 분석을위한 스파크2 프로그래밍(백성민, 위키북스, 2017)
 - [스파크 공식 홈페이지](https://Spark.apache.org/)
 - [스파크 2.2.0 Documents](https://Spark.apache.org/docs/latest/index.html)
