Spark Reference 변경

--- a/_posts/Spark/2017-08-16-05_Spark_RDD.md
+++ b/_posts/Spark/2017-08-16-05_Spark_RDD.md
@@ -323,7 +323,7 @@ val rdd1 = sc.textFile("<spark_home_dir>/README.md")
     ```
 
 # References
-- 빅데이터 분석을위한 스파크2 프로그래밍(백성민, 위키북스, 2017)
+- [빅데이터 분석을위한 스파크2 프로그래밍(백성민, 위키북스, 2017)](http://wikibook.co.kr/spark/)
 - [스파크 공식 홈페이지](https://Spark.apache.org/)
 - [스파크 2.2.0 Documents](https://Spark.apache.org/docs/latest/index.html)
 - [개발자 블로그](https://m.blog.naver.com/PostView.nhn?blogId=tajogood&logNo=220783546981&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F)
