--- a/_posts/Spark/2017-08-16-03_Spark_Shell.md
+++ b/_posts/Spark/2017-08-16-03_Spark_Shell.md
@@ -54,3 +54,6 @@ res1: Long = 3
 2. 애플리케이션 실행과 관련된 옵션
 3. 클러스터 동작과 관련된 옵션
     - 실행옵션을 통해 로컬/클러스터 등으로 선택해 구동 가능
+
+# References
+- [빅데이터 분석을위한 스파크2 프로그래밍(백성민, 위키북스, 2017)](http://wikibook.co.kr/spark/)
