Scala Intro Post

--- a/_posts/Scala/2017-08-23-01_Scala_Intro.md
+++ b/_posts/Scala/2017-08-23-01_Scala_Intro.md
@@ -1,4 +1,11 @@
-# Scala 기본 문법
+---
+layout: post
+title: 01 Scala 기본 문법
+category: Scala
+tags:
+- Scala
+- Introduction
+---
 
 ## 1. Scala Shell
 - PERL 방식으로 동작
