--- a/_posts/design-patterns/2017-05-08_01_Singleton.md
+++ b/_posts/design-patterns/2017-05-08_01_Singleton.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: Singleton
+category: Design Pattern
+tags:
+- Design Pattern
+---
+
 # 싱글턴 패턴(Singleton Pattern)
 
 ## 1. 싱글턴 패턴 이란?
@@ -10,10 +18,10 @@
 ```java
 public class Singleton {
 	private static Singleton singleton;
-	
+
 	private Singleton() {
 	}
-	
+
 	public static Singleton getInstance() {
 		if(singleton == null){
 			singleton = new Singleton();
